--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/min/index.min.js"></script>
+    <script src="./js/min/index2.min.js"></script>
 </body>
-</html>
+</html> 
